i4k/orionemu/src/parser_bison.output
Terminais não utilizados na gramática

   TSI
   TESI


Gramática

    0 $accept: program $end

    1 program: stmts
    2        | program stmts
    3        | program error EOL

    4 stmts: opcode_mnemonic
    5      | asm_directive

    6 opcode_mnemonic: TPUSH reg EOL
    7                | TPUSH NUMBER EOL
    8                | TPOP reg EOL

    9 asm_directive: TPUSH NUMBER NUMBER EOL

   10 reg: TAX
   11    | TBX
   12    | TCX
   13    | TDX
   14    | TSP
   15    | TBP
   16    | TDI
   17    | TIP
   18    | TEAX
   19    | TEBX
   20    | TECX
   21    | TEDX
   22    | TESP
   23    | TEBP
   24    | TEDI
   25    | TEIP


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256) 3
NUMBER (258) 7 9
TAX (259) 10
TBX (260) 11
TCX (261) 12
TDX (262) 13
TSP (263) 14
TBP (264) 15
TSI (265)
TDI (266) 16
TIP (267) 17
TEAX (268) 18
TEBX (269) 19
TECX (270) 20
TEDX (271) 21
TESP (272) 22
TEBP (273) 23
TESI (274)
TEDI (275) 24
TEIP (276) 25
EOL (277) 3 6 7 8 9
TPUSH (278) 6 7 9
TPOP (279) 8


Não-terminais com as regras onde eles aparecem

$accept (25)
    à esquerda: 0
program (26)
    à esquerda: 1 2 3, à direita: 0 2 3
stmts (27)
    à esquerda: 4 5, à direita: 1 2
opcode_mnemonic (28)
    à esquerda: 6 7 8, à direita: 4
asm_directive (29)
    à esquerda: 9, à direita: 5
reg (30)
    à esquerda: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, à direita:
    6 8


estado 0

    0 $accept: . program $end
    1 program: . stmts
    2        | . program stmts
    3        | . program error EOL
    4 stmts: . opcode_mnemonic
    5      | . asm_directive
    6 opcode_mnemonic: . TPUSH reg EOL
    7                | . TPUSH NUMBER EOL
    8                | . TPOP reg EOL
    9 asm_directive: . TPUSH NUMBER NUMBER EOL

    TPUSH  deslocar, e ir ao estado 1
    TPOP   deslocar, e ir ao estado 2

    program          ir ao estado 3
    stmts            ir ao estado 4
    opcode_mnemonic  ir ao estado 5
    asm_directive    ir ao estado 6


estado 1

    6 opcode_mnemonic: TPUSH . reg EOL
    7                | TPUSH . NUMBER EOL
    9 asm_directive: TPUSH . NUMBER NUMBER EOL
   10 reg: . TAX
   11    | . TBX
   12    | . TCX
   13    | . TDX
   14    | . TSP
   15    | . TBP
   16    | . TDI
   17    | . TIP
   18    | . TEAX
   19    | . TEBX
   20    | . TECX
   21    | . TEDX
   22    | . TESP
   23    | . TEBP
   24    | . TEDI
   25    | . TEIP

    NUMBER  deslocar, e ir ao estado 7
    TAX     deslocar, e ir ao estado 8
    TBX     deslocar, e ir ao estado 9
    TCX     deslocar, e ir ao estado 10
    TDX     deslocar, e ir ao estado 11
    TSP     deslocar, e ir ao estado 12
    TBP     deslocar, e ir ao estado 13
    TDI     deslocar, e ir ao estado 14
    TIP     deslocar, e ir ao estado 15
    TEAX    deslocar, e ir ao estado 16
    TEBX    deslocar, e ir ao estado 17
    TECX    deslocar, e ir ao estado 18
    TEDX    deslocar, e ir ao estado 19
    TESP    deslocar, e ir ao estado 20
    TEBP    deslocar, e ir ao estado 21
    TEDI    deslocar, e ir ao estado 22
    TEIP    deslocar, e ir ao estado 23

    reg  ir ao estado 24


estado 2

    8 opcode_mnemonic: TPOP . reg EOL
   10 reg: . TAX
   11    | . TBX
   12    | . TCX
   13    | . TDX
   14    | . TSP
   15    | . TBP
   16    | . TDI
   17    | . TIP
   18    | . TEAX
   19    | . TEBX
   20    | . TECX
   21    | . TEDX
   22    | . TESP
   23    | . TEBP
   24    | . TEDI
   25    | . TEIP

    TAX   deslocar, e ir ao estado 8
    TBX   deslocar, e ir ao estado 9
    TCX   deslocar, e ir ao estado 10
    TDX   deslocar, e ir ao estado 11
    TSP   deslocar, e ir ao estado 12
    TBP   deslocar, e ir ao estado 13
    TDI   deslocar, e ir ao estado 14
    TIP   deslocar, e ir ao estado 15
    TEAX  deslocar, e ir ao estado 16
    TEBX  deslocar, e ir ao estado 17
    TECX  deslocar, e ir ao estado 18
    TEDX  deslocar, e ir ao estado 19
    TESP  deslocar, e ir ao estado 20
    TEBP  deslocar, e ir ao estado 21
    TEDI  deslocar, e ir ao estado 22
    TEIP  deslocar, e ir ao estado 23

    reg  ir ao estado 25


estado 3

    0 $accept: program . $end
    2 program: program . stmts
    3        | program . error EOL
    4 stmts: . opcode_mnemonic
    5      | . asm_directive
    6 opcode_mnemonic: . TPUSH reg EOL
    7                | . TPUSH NUMBER EOL
    8                | . TPOP reg EOL
    9 asm_directive: . TPUSH NUMBER NUMBER EOL

    $end   deslocar, e ir ao estado 26
    error  deslocar, e ir ao estado 27
    TPUSH  deslocar, e ir ao estado 1
    TPOP   deslocar, e ir ao estado 2

    stmts            ir ao estado 28
    opcode_mnemonic  ir ao estado 5
    asm_directive    ir ao estado 6


estado 4

    1 program: stmts .

    $padrão  reduzir usando a regra 1 (program)


estado 5

    4 stmts: opcode_mnemonic .

    $padrão  reduzir usando a regra 4 (stmts)


estado 6

    5 stmts: asm_directive .

    $padrão  reduzir usando a regra 5 (stmts)


estado 7

    7 opcode_mnemonic: TPUSH NUMBER . EOL
    9 asm_directive: TPUSH NUMBER . NUMBER EOL

    NUMBER  deslocar, e ir ao estado 29
    EOL     deslocar, e ir ao estado 30


estado 8

   10 reg: TAX .

    $padrão  reduzir usando a regra 10 (reg)


estado 9

   11 reg: TBX .

    $padrão  reduzir usando a regra 11 (reg)


estado 10

   12 reg: TCX .

    $padrão  reduzir usando a regra 12 (reg)


estado 11

   13 reg: TDX .

    $padrão  reduzir usando a regra 13 (reg)


estado 12

   14 reg: TSP .

    $padrão  reduzir usando a regra 14 (reg)


estado 13

   15 reg: TBP .

    $padrão  reduzir usando a regra 15 (reg)


estado 14

   16 reg: TDI .

    $padrão  reduzir usando a regra 16 (reg)


estado 15

   17 reg: TIP .

    $padrão  reduzir usando a regra 17 (reg)


estado 16

   18 reg: TEAX .

    $padrão  reduzir usando a regra 18 (reg)


estado 17

   19 reg: TEBX .

    $padrão  reduzir usando a regra 19 (reg)


estado 18

   20 reg: TECX .

    $padrão  reduzir usando a regra 20 (reg)


estado 19

   21 reg: TEDX .

    $padrão  reduzir usando a regra 21 (reg)


estado 20

   22 reg: TESP .

    $padrão  reduzir usando a regra 22 (reg)


estado 21

   23 reg: TEBP .

    $padrão  reduzir usando a regra 23 (reg)


estado 22

   24 reg: TEDI .

    $padrão  reduzir usando a regra 24 (reg)


estado 23

   25 reg: TEIP .

    $padrão  reduzir usando a regra 25 (reg)


estado 24

    6 opcode_mnemonic: TPUSH reg . EOL

    EOL  deslocar, e ir ao estado 31


estado 25

    8 opcode_mnemonic: TPOP reg . EOL

    EOL  deslocar, e ir ao estado 32


estado 26

    0 $accept: program $end .

    $padrão  aceitar


estado 27

    3 program: program error . EOL

    EOL  deslocar, e ir ao estado 33


estado 28

    2 program: program stmts .

    $padrão  reduzir usando a regra 2 (program)


estado 29

    9 asm_directive: TPUSH NUMBER NUMBER . EOL

    EOL  deslocar, e ir ao estado 34


estado 30

    7 opcode_mnemonic: TPUSH NUMBER EOL .

    $padrão  reduzir usando a regra 7 (opcode_mnemonic)


estado 31

    6 opcode_mnemonic: TPUSH reg EOL .

    $padrão  reduzir usando a regra 6 (opcode_mnemonic)


estado 32

    8 opcode_mnemonic: TPOP reg EOL .

    $padrão  reduzir usando a regra 8 (opcode_mnemonic)


estado 33

    3 program: program error EOL .

    $padrão  reduzir usando a regra 3 (program)


estado 34

    9 asm_directive: TPUSH NUMBER NUMBER EOL .

    $padrão  reduzir usando a regra 9 (asm_directive)
